--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li class="item" id="item-14">14</li>
         <li class="item" id="item-15">15</li>
       </ul>
-      <img>
+      <img id="dino">
 
     </div>
     <script src="./main.js"></script>
